@@ -1,5 +1,15 @@
 2010-06-21  Jeffrey Stedfast  <fejj@novell.com>
 
+	* multiscaleimage.cpp (qtree_set_image): Renamed from
+	set_value(). The value is always a cairo_surface_t image.
+	(qtree_lookup_image): Renamed from lookup_data().
+	(qtree_has_image): Renamed from has_value().
+	(timer macros): Fixed no-op macro names.
+	(_qtree_next_sibling): Precalculate pow2 (l) so we don't have to
+	calculate it multiple times in some of the conditions.
+
+2010-06-21  Jeffrey Stedfast  <fejj@novell.com>
+
 	* uielement.h (UIElement): Move the Right mouse button events to
 	the public grouping.
 
